load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//javascript:rules.bzl", "js_library")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "prettier_config",
    srcs = ["prettierrc.yml"],
    root = ":root",
)

cjs_root(
    name = "root",
    package_name = "@better-rules-javascript/root",
)
