load("@rules_python//python:defs.bzl", "py_binary")
load("//package:rules.bzl", "pkg_executable")

py_binary(
    name = "bin",
    srcs = glob(["src/**/*.py"]),
    imports = ["src"],
    legacy_create_init = False,
    main = "src/rivetbazelutil/bazelmrun/__main__.py",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/client:py",
        "//run/common:py",
    ],
)

pkg_executable(
    name = "pkg",
    bin = ":bin",
    path = "mrun",
    visibility = ["//:__subpackages__"],
)
