load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "bin",
    srcs = glob(["src/**/*.py"]),
    data = ["//bazel/watchrun:bin"],
    imports = ["src"],
    legacy_create_init = False,
    main = "src/rivetbazelutil/services/__main__.py",
    visibility = ["//visibility:public"],
    deps = ["@rules_python//python/runfiles"],
)
