load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "bin",
    srcs = glob(["**/*.py"]),
    imports = ["."],
    legacy_create_init = False,
    main = "bazelwatcher2/hash/__main__.py",
    deps = ["//python/worker:py"],
)
