load("@rules_python//python:defs.bzl", "py_binary")
load("//watcher:rules.bzl", "restart_service")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "bin",
    srcs = glob(["**/*.py"]),
    imports = ["."],
    legacy_create_init = False,
    main = "bazelwatcher2/watchrun/main.py",
    deps = ["//ibazel/notifications:py"],
)

sh_binary(
    name = "example",
    srcs = ["test.sh"],
)

restart_service(
    name = "test",
    bin = ":example",
)
