load("@rules_python//python:defs.bzl", "py_binary")
load("//watcher:rules.bzl", "restart_service")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "bin",
    srcs = glob(["**/*.py"]),
    data = ["@bazel_watcher//ibazel"],
    imports = ["."],
    legacy_create_init = False,
    main = "bazelwatcher2/watchrun/__main__.py",
    deps = [
        "//ibazel/notifications:py",
        "@rules_python//python/runfiles",
    ],
)

sh_binary(
    name = "example",
    srcs = ["test.sh"],
)

restart_service(
    name = "test",
    bin = ":example",
    pass_events = True,
)
