load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_python//python:defs.bzl", "py_binary")
load("//package:rules.bzl", "pkg_executable")

py_binary(
    name = "bin",
    srcs = glob(["**/*.py"]),
    data = ["@bazel_watcher//ibazel"],
    imports = ["."],
    legacy_create_init = False,
    main = "bazelwatcher2/watchrun/__main__.py",
    visibility = ["//visibility:public"],
    deps = [
        "//ibazel/notifications:py",
        "@rules_python//python/runfiles",
    ],
)

pkg_executable(
    name = "pkg",
    bin = ":bin",
    path = "watchrun",
)

pkg_tar(
    name = "tar",
    srcs = [":pkg"],
    visibility = ["//visibility:public"],
)
